[package]
name = "breakout"
version = "1.0.0"
authors = ["planet0104 <planet0104@gmail.com>"]
edition = "2018"

[dependencies]
# mengine = { path = "../mengine" }
mengine = { git = "https://github.com/planet0104/mengine" }
retain_mut = "0.1.0"
nalgebra = "0.18"
ncollide2d = "0.19"
nphysics2d = "0.11"
# nphysics_testbed2d = "0.5.0"

[profile.release]
lto = true
opt-level = 's'
panic = 'abort'